# Haskell

./: .gitignore  AlecsHaskell.hs  Amicable.hs  Approximations.hs  Bird.hs  Birthday.hs  Blinkylight.hs  BurrowsWheeler.hs  Categoria.hs  Comonad.hs  Csort.hs  Farey.hs  Haskell.ipynb  Hensel.hs  Hutton.hs  Junk.hs  LilOrphanAnnie.hs  Lulz.hs  Marsden.hs  Monad.hs  Objnumbertheory.hs  Poly.hs  Pprimes.hs  Primes.hs  Printables.hs  Probability.hs  ProjectEuler.hs  Pure_Data_Parser.hs  Quaternions.hs  README.md  RayTracer.hs  SarahGroups.hs  Shuffle.hs  SortsShuffles.hs  StructuralNumbers.hs  Test.hs  Trachtenberg.hs  Trees.hs  Trial.hs  Typehandling.hs  (+21 more)
.ipynb_checkpoints/: Haskell-checkpoint.ipynb
AsciiArt/: test.hs
Attenuations/: .gitignore  Attenuation.hs  AttenuationTests.hs  InterceptMethod.hs  Main.hs  Main.prof  MainWriter.hs  RayTracer.hs  TestMain.hs  attenuation.hs  trace.sh
Audio/: BubbleSort.hs  FFT.hs  SampleVector.hs  SimpleSine.hs  SortsShuffles.hs  Wave.hs  WaveTest.hs  sorter.sh
Banking/: BankParser.hs  Budget.hs  BudgetHelpers.hs  BudgetTests.hs  README.md  dockerfile
BankingStack/: .gitignore  BankingStack.cabal  BudgetTests.hs  ChangeLog.md  README.md  package.yaml
Birthdays/: Birthday.hs  birthdayScript.hs
Chemistry/: Chemistry.hs
Ciphers/: .gitignore  Ciphers.cabal  LICENSE  README.md  Text.hs  cabal.project.local
ColorSummarizer/: ColorSummarizer.hs  README.md  filename.json  prisma.html  (+6 more)
SpringRank/: .cabal  .gitignore  Adjacency.hs  CsvParser.hs  NumericalHelper.hs  PrintHelper.hs  README.md  SpringRank.hs  Test.hs  springrank
(+568 files in other folders)
